--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:14.2
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: test_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data/
+      - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+
   nxginx:
     depends_on:
       - api
@@ -16,8 +29,8 @@ services:
     build:
       dockerfile: Dockerfile
       context: "./api"
-    # depends_on:
-    #   db
+    depends_on:
+      - db
     volumes:
       - /api/node_modules
       - ./api:/api
